--- a/src/services/Template.Identidade.API/appsettings.Development.json
+++ b/src/services/Template.Identidade.API/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm" : "https://localhost"
   }
 }
