Inserido Geração de Token - Aula 07

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /src/services/Template.Pedido.API
 /src/web/Template.WebApp.MVC
 /src/building blocks/Template.Core
+/src/services/Template.Carrinho.API/obj/Container
