--- a/src/services/Template.Identidade.API/appsettings.Development.json
+++ b/src/services/Template.Identidade.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "AppSettings": {
-    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "Secret": "MEUSEGREDOSUPERSECRETO1234562024",
     "ExpiracaoHoras": 2,
     "Emissor": "MeuSistema",
     "ValidoEm" : "https://localhost"
