Refatoração e melhorias - Aula 10

--- a/src/services/Template.Identidade.API/appsettings.Development.json
+++ b/src/services/Template.Identidade.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TemplateDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
@@ -10,6 +13,6 @@
     "Secret": "MEUSEGREDOSUPERSECRETO1234562024",
     "ExpiracaoHoras": 2,
     "Emissor": "MeuSistema",
-    "ValidoEm" : "https://localhost"
+    "ValidoEm": "https://localhost"
   }
 }
