--- a/src/services/Template.Identidade.API/Properties/launchSettings.json
+++ b/src/services/Template.Identidade.API/Properties/launchSettings.json
@@ -20,12 +20,20 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7154;http://localhost:5174"
     },
-    "IIS Express": {
+    "IIS - Dev": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "IIS - Prod": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "Container (Dockerfile)": {
